version/0.19/_sources/api/solver/_autosummary/settings/structure_1.rst.txt
:orphan:

.. _structure_1:

structure
=========

.. autoclass:: ansys.fluent.core.solver.settings_241.structure_1.structure
    :show-inheritance:

.. rubric:: Attributes

==================================================   ======================================

Attribute                                                                           Summary

==================================================   ======================================
:ref:`x_displacement_type <x_displacement_type>`         X-Displacement Boundary Condition.

:ref:`x_displacement_value <x_displacement_value>`              X-Component Boundary Value.

:ref:`y_displacement_type <y_displacement_type>`         Y-Displacement Boundary Condition.

:ref:`y_displacement_value <y_displacement_value>`              Y-Component Boundary Value.

:ref:`z_displacement_type <z_displacement_type>`         Z-Displacement Boundary Condition.

:ref:`z_displacement_value <z_displacement_value>`              Z-Component Boundary Value.

==================================================   ======================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                      'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_3>`                                      'child_object_type' of phase.

:ref:`inlet_vent_child <inlet_vent_child>`                         'child_object_type' of inlet_vent.

:ref:`phase_child <phase_child_5>`                                      'child_object_type' of phase.

:ref:`intake_fan_child <intake_fan_child>`                         'child_object_type' of intake_fan.

:ref:`phase_child <phase_child_6>`                                      'child_object_type' of phase.

:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`          'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_9>`                                      'child_object_type' of phase.

:ref:`mass_flow_outlet_child <mass_flow_outlet_child>`       'child_object_type' of mass_flow_outlet.

:ref:`phase_child <phase_child_10>`                                     'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                      'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_14>`                                     'child_object_type' of phase.

:ref:`pressure_inlet_child <pressure_inlet_child>`             'child_object_type' of pressure_inlet.

:ref:`phase_child <phase_child_18>`                                     'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`          'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_19>`                                     'child_object_type' of phase.

:ref:`velocity_inlet_child <velocity_inlet_child>`             'child_object_type' of velocity_inlet.

:ref:`phase_child <phase_child_24>`                                     'child_object_type' of phase.

:ref:`wall_child <wall_child>`                                           'child_object_type' of wall.

:ref:`phase_child <phase_child_25>`                                     'child_object_type' of phase.

======================================================   ============================================

