version/0.25/_sources/api/solver/_autosummary/settings/structure_1.rst.txt
:orphan:

.. _structure_1:

structure
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.structure_1.structure
    :show-inheritance:

.. rubric:: Attributes

============================================================   =============================================

Attribute                                                                                            Summary

============================================================   =============================================
:ref:`x_disp_boundary_condition <x_disp_boundary_condition>`       Select X-Displacement Boundary Condition.

:ref:`x_disp_boundary_value <x_disp_boundary_value>`                  Specify X-Displacement Boundary value.

:ref:`y_disp_boundary_condition <y_disp_boundary_condition>`       Select Y-Displacement Boundary Condition.

:ref:`y_disp_boundary_value <y_disp_boundary_value>`                   Select Y-Displacement Boundary Value.

:ref:`z_disp_boundary_condition <z_disp_boundary_condition>`       Select Z-Displacement Boundary Condition.

:ref:`z_disp_boundary_value <z_disp_boundary_value>`                   Select Z-Displacement Boundary Value.

============================================================   =============================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                            'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_4>`                                            'child_object_type' of phase.

:ref:`inlet_vent_child <inlet_vent_child>`                               'child_object_type' of inlet_vent.

:ref:`phase_child <phase_child_7>`                                            'child_object_type' of phase.

:ref:`intake_fan_child <intake_fan_child>`                               'child_object_type' of intake_fan.

:ref:`phase_child <phase_child_8>`                                            'child_object_type' of phase.

:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`                'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_11>`                                           'child_object_type' of phase.

:ref:`mass_flow_outlet_child <mass_flow_outlet_child>`             'child_object_type' of mass_flow_outlet.

:ref:`phase_child <phase_child_12>`                                           'child_object_type' of phase.

:ref:`outflow_child <outflow_child>`                                        'child_object_type' of outflow.

:ref:`phase_child <phase_child_15>`                                           'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                            'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_16>`                                           'child_object_type' of phase.

:ref:`pressure_far_field_child <pressure_far_field_child>`       'child_object_type' of pressure_far_field.

:ref:`phase_child <phase_child_20>`                                           'child_object_type' of phase.

:ref:`pressure_inlet_child <pressure_inlet_child>`                   'child_object_type' of pressure_inlet.

:ref:`phase_child <phase_child_21>`                                           'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`                'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_22>`                                           'child_object_type' of phase.

:ref:`velocity_inlet_child <velocity_inlet_child>`                   'child_object_type' of velocity_inlet.

:ref:`phase_child <phase_child_29>`                                           'child_object_type' of phase.

:ref:`wall_child <wall_child>`                                                 'child_object_type' of wall.

:ref:`phase_child <phase_child_30>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_33>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_35>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_36>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_39>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_40>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_43>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_44>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_47>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_48>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_49>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_54>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_55>`                                           'child_object_type' of phase.

==========================================================   ==============================================

